<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_security_preference_category">Seguridad</string>
    <string name="toggle_enable_block_pattern_mode">Bloqueo con patrón</string>
    <string name="summary_enable_block_pattern_mode">Activa o desactiva el bloqueo con patrón.</string>
    <string name="toggle_enable_gesture_mode">Bloqueo con gestos.</string>
    <string name="summary_enable_gesture_mode">Activa o desactiva el bloqueo con gestos.</string>
    <string name="toggle_enable_numeric_mode">Bloqueo con dígitos.</string>
    <string name="summary_enable_numeric_mode">Activa o desactiva el bloqueo con dígitos.</string>
    <string name="toggle_enable_alfa_numeric_mode">Bloqueo alfanumérico.</string>
    <string name="summary_enable_alfa_numeric_mode">Activa o desactiva el bloqueo alfanumérico.</string>
    <string name="app_name">Password</string>
    <string name="hello_world">Bienvenido :P</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_toggle_preference">title_toggle_preference</string>
    <string name="inline_preferences">Seguridad</string>
    <string name="summary_toggle_preference">summary_toggle_preference</string>
    <string name="dialog_based_preferences">dialog_based_preferences</string>
    <string name="dialog_title_edittext_preference">dialog_title_edittext_preference</string>
    <string name="title_edittext_preference">title_edittext_preference</string>
    <string name="summary_edittext_preference">summary_edittext_preference</string>
    <string name="dialog_title_list_preference">dialog_title_list_preference</string>
    <string name="title_list_preference">title_list_preference</string>
    <string name="summary_list_preference">summary_list_preference</string>
    <string name="launch_preferences">launch_preferences</string>

    <string-array name="entries_list_preference">
        <item name="entryvalues_list_preference">entryvalues_list_preference</item>
    </string-array>
    <string-array name="entryvalues_list_preference">
        <item name="entryvalues_list_preference">entryvalues_list_preference</item>
    </string-array>

    <string name="title_screen_preference">title_screen_preference</string>
    <string name="summary_screen_preference">summary_screen_preference</string>
    <string name="title_next_screen_toggle_preference">title_next_screen_toggle_preference</string>
    <string name="title_next_screen_toggle_preference">title_next_screen_toggle_preference</string>
    <string name="summary_next_screen_toggle_preference">summary_next_screen_toggle_preference</string>
    <string name="title_next_screen_toggle_preference">title_next_screen_toggle_preference</string>
    <string name="title_intent_preference">title_intent_preference</string>
    <string name="summary_intent_preference">summary_intent_preference</string>
    <string name="preference_attributes">preference_attributes</string>
    <string name="title_parent_preference">title_parent_preference</string>
    <string name="summary_parent_preference">summary_parent_preference</string>
    <string name="summary_intent_preference">summary_intent_preference</string>
    <string name="preference_attributes">preference_attributes</string>
    <string name="title_activity_create_pattern">CreatePatternActivity</string>
    <string name="title_activity_show_category_list">ShowCategoryListActivity</string>
    <string name="title_activity_alfanumeric">AlfanumericActivity</string>
    <string name="title_activity_numeric">NumericActivity</string>
    <string name="title_activity_create_gesture">CreateGestureActivity</string>
    <string name="title_activity_gesture_builder">GestureBuilderActivity</string>
    <string name="label_confirm_gesture">DIBUJA EL GESTO PARA CONFIRMAR</string>
    <!-- Buttons -->
    <skip /> <!-- Label, button used to add a gesture -->
    <string name="button_add">Add gesture</string>
    <!-- Label, button used to reload all gestures -->
    <string name="button_reload">Reload</string>
    <!-- Label, button used to cancel the operation of adding a gesture -->
    <string name="button_discard">CANCELAR</string>
    <!-- Label, button used to save a gesture newly created -->
    <string name="button_done">CONTINUAR</string>
    <string name="button_save">GUARDAR</string>
    <!-- Gestures -->
    <skip />
    <!-- Label, prompt asking the user to enter the name of the gesture -->
    <string name="prompt_gesture_name">Name</string>
    <!-- Error message, informs the user he needs to enter a name before saving a gesture -->
    <string name="error_missing_name">You must enter a name</string>
    <!-- success message, tells the user where the gesture was saved -->
    <string name="save_success">Gesture saved in %s</string>
    <!-- Buttons in Rename gesture dialog box -->
    <string name="rename_action">OK</string>
    <!-- Buttons in Rename gesture dialog box -->
    <string name="cancel_action">CANCELAR </string>
    <!-- Message displayed when the user opens the gestures settings screen -->
    <string name="gestures_loading">Loading gestures...</string>
    <!-- Message displayed when the user has no gestures -->
    <string name="gestures_empty">No gestures</string>
    <!-- Title of the screen used to view/manage gestures -->
    <string name="gestures_empty">No gestures</string>
    <!-- Title of the screen used to view/manage gestures -->
    <string name="gestures_activity">Gestures</string>
    <!-- Noun, menu item used to rename a gesture -->
    <string name="gestures_rename">Rename</string>
    <!-- Noun, menu item used to remove a gesture -->
    <string name="gestures_delete">Delete</string>
    <!-- Message displayed when a gesture is successfully deleted -->
    <string name="gestures_delete_success">Gesture deleted</string>
    <!-- Title of dialog box -->
    <string name="gestures_rename_title">Rename gesture</string>
    <!-- Label of gesture name field in Rename gesture dialog box -->
    <string name="gestures_rename_label">Gesture name</string>
    <!-- Message, displayed when the sdcard cannot be found, 1st parameter is the name of the file that stores the gestures. CHAR LIMIT=80 -->
    <string name="gestures_error_loading">Could not load %s. Make sure you have storage available.</string>
    <string name="title_activity_validate_gesture">ValidateGesture</string>
    <string name="title_activity_login_validator">LoginValidatorActivity</string>
    <string name="title_activity_validate_numeric_lock">ValidateNumericLock</string>
    <string name="title_activity_validate_alfa_numeric_lock">ValidateAlfaNumericLock</string>
    <string name="title_activity_validate_gesture_lock">ValidateGestureLock</string>
    
    
       <string name="app_name">PASSWORD</string>
    <string name="menu_settings">Ajustes</string>
    <string name="addPass">AGREGAR NUEVA CONTRASEÑA</string>
    <string name="consultPass">Consultar contraseñas</string>
    <string name="settingsPass">Ajustes</string>
    <string name="title_activity_add_pass">PASSWORD</string>
    <string name="menu_save">Guardar</string>
    <string name="menu_archive">Almacenar</string>
    <string name="menu_delete">Borrar</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list_fragment">ListFragment</string>
    <string name="list_title">PASSWORD</string>
    <string name="empty_list">Lista vacía</string>
    <string name="title_activity_category_list">CategoryList</string>
    <string name="title_activity_select_category">SelectCategory</string>
    <string name="preferences_title">DATOS DE LA CUENTA</string>
    <string name="title_list_preference">Categoría</string>
    <string name="summary_list_preference">Categoría de la cuenta</string>
    <string name="title_name">Nombre</string>
    <string name="summary_name">Nombre de la cuenta</string>
    <string name="title_user">Usuario</string>
    <string name="summary_user">Nombre de usuario</string>
    <string name="title_pass">Contraseña</string>
    <string name="summary_pass">Contraseña completa</string>
    <string name="title_notes">Notas</string>
    <string name="summary_notes">Notas de la cuenta</string>
    <string name="title_checkbox_preference">Establecimiento</string>
    <string name="summary_checkbox_preference">¿Es un establecimiento?</string>
    <string name="preferences_title2">CONSULTA CONTRASEÑA</string>
    <string name="title_activity_consult_pass">PASSWORD</string>
    <string name="title_list_preference_cat">Categoría</string>
    <string name="summary_list_preference_cat">Consulta categoría</string>
    <string name="title_list_preference_name">Nombre</string>
    <string name="summary_list_preference_name">Consulta nombre</string>
    <string name="icon">Icono</string>
    <string name="title_activity_view_categories">Vista de categorías</string>
    <string name="title_activity_example">PASSWORD</string>
    <string name="title_activity_list_example">Lista de ejemplo</string>
    <string name="title_activity_consult">PASSWORD</string>
    <string name="name_count">Nombre de la cuenta:</string>
    <string name="user_count">Usuario:</string>
    <string name="password_count">Contraseña:</string>
    <string name="notes_count">Notas:</string>
    <string name="title_activity_show_settings">PASSWORD</string>
    <string name="title_activity_settings_list_fragment">PASSWORD</string>
    <string name="title_activity_activity_settings">PASSWORD</string>
    <string name="preferences_title3">NUEVA CATEGORIA</string>
    <string name="new_category">Categoría</string>
    <string name="summary_new_category">Nombre de una nueva categoría</string>
    <string name="title_activity_main">Your Nearest Places</string>

</resources>